dark mode clean list fix

--- a/Horizontal/wwwroot/css/dark-mode.css
+++ b/Horizontal/wwwroot/css/dark-mode.css
@@ -64,9 +64,12 @@ html.dark-theme .full-article__footing-nav strong {
     color: white;
 }
 
+html.dark-theme ul.clean-list li {
+    color: #d9d9d9;
+}
 
 @media (hover: hover) {
-    html.dark-theme nav.side-navbar li > i.fa-chevron-right:hover {
+    html .dark-theme nav.side-navbar li > i.fa-chevron-right:hover {
         cursor: pointer;
         color: #f13544;
     }
